monitoring/services/grafana/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  namespace: monitoring
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:5.1.5
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 60
          timeoutSeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 60
          timeoutSeconds: 30
          periodSeconds: 10
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 3000
        volumeMounts:
          - name: grafana-datasource-volume
            mountPath: /etc/grafana/provisioning/datasources
          - name: grafana-dashboard-volume
            mountPath: /etc/grafana/provisioning/dashboards
          - name: grafana-prometheus-stats-volume
            mountPath: /var/lib/grafana/dashboards
      volumes:
        - name: grafana-datasource-volume
          configMap:
            name: grafana
            items:
            - key: prometheus.yml
              path: prometheus.yml
        - name: grafana-dashboard-volume
          configMap:
            name: grafana
            items:
            - key: dashboards.yml
              path: dashboards.yml
        - name: grafana-prometheus-stats-volume
          configMap:
            name: grafana
            items:
            - key: prometheus-stats.json
              path: prometheus-stats.json
