monitoring/services/grafana/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  tls:
  - secretName: pdok-smartemission-nl-tls
    hosts:
    - pdok.smartemission.nl
  rules:
  - host: pdok.smartemission.nl
    http:
      paths:
      - path: /grafana-monitoring
        backend:
          serviceName: grafana
          servicePort: 3000
